5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4367/executions/1692_1100.log
== TEST (2019-04-25 18:18:21) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
x=int(input("valor em real: "))
print("entrada:", x)

if x>0:
	
-- ERROR:
File "XXXX", line 9
    
     ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 18:18:28) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
x=int(input("valor em real: "))
print("entrada:", x)

if x>0:	
-- ERROR:
File "XXXX", line 8
    
            ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 18:18:36) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
x=int(input("valor em real: "))
print("entrada:", x)


-- OUTPUT:
entrada: 100
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 18:24:43) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
x=int(input("valor em real: "))
print("entrada:", x)

if x>0:
	elif(x==2):
		print("Animal: Tartaruga")
	elif(x==5):
		print("Animal: Garca")
	elif(x==10):
		print("Animal: Arara")
	elif(x==20):
		print("Animal: Mico-leao-dourado")
	elif(x==50):
		print("Animal: Onca-pintada")
	elif(x==100):
		print("Animal: Garoupa")
else:
	print("Animal: Invalido"
-- ERROR:
File "XXXX", line 8
    elif(x==2):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 18:24:53) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
x=int(input("valor em real: "))
print("entrada:", x)

if x>0:
	elif (x==2):
		print("Animal: Tartaruga")
	elif(x==5):
		print("Animal: Garca")
	elif(x==10):
		print("Animal: Arara")
	elif(x==20):
		print("Animal: Mico-leao-dourado")
	elif(x==50):
		print("Animal: Onca-pintada")
	elif(x==100):
		print("Animal: Garoupa")
else:
	print("Animal: Invalido"
-- ERROR:
File "XXXX", line 8
    elif (x==2):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 18:26:53) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
x=int(input("valor em real: "))
print("entrada:", x)

if x>0:
	x="Animal: "
	elif(x==2):
		print(x, "Tartaruga")
	elif(x==5):
		print("Animal: Garca")
	elif(x==10):
		print("Animal: Arara")
	elif(x==20):
		print("Animal: Mico-leao-dourado")
	elif(x==50):
		print("Animal: Onca-pintada")
	elif(x==100):
		print("Animal: Garoupa")
else:
	print("Animal: Invalido")
-- ERROR:
File "XXXX", line 9
    elif(x==2):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 18:30:41) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
x=int(input("valor em real: "))
print("entrada:", x)
if(x==2):
	print("Tartaruga")
elif(x==5):
	print("Animal: Garca")
elif(x==10):
	print("Animal: Arara")
elif(x==20):
	print("Animal: Mico-leao-dourado")
elif(x==50):
	print("Animal: Onca-pintada")
elif(x==100):
	print("Animal: Garoupa")
else:
	print("Animal: Invalido")
-- OUTPUT:
entrada: 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 18:30:52) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
x=int(input("valor em real: "))
print("entrada:", x)
if(x==2):
	print("Tartaruga")
elif(x==5):
	print("Animal: Garca")
elif(x==10):
	print("Animal: Arara")
elif(x==20):
	print("Animal: Mico-leao-dourado")
elif(x==50):
	print("Animal: Onca-pintada")
elif(x==100):
	print("Animal: Garoupa")
else:
	print("Animal: Invalido")
-- OUTPUT:
entrada: 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-25 18:30:59) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
x=int(input("valor em real: "))
print("entrada:", x)
if(x==2):
	print("Tartaruga")
elif(x==5):
	print("Animal: Garca")
elif(x==10):
	print("Animal: Arara")
elif(x==20):
	print("Animal: Mico-leao-dourado")
elif(x==50):
	print("Animal: Onca-pintada")
elif(x==100):
	print("Animal: Garoupa")
else:
	print("Animal: Invalido")
-- EXECUTION TIME:
0.200135
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
entrada: 100
Animal: Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
entrada: 7
Animal: Invalido
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
entrada: 50
Animal: Onca-pintada
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 18:31:57) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
x=int(input("valor em real: "))
print("entrada:", x)
if(x==2):
	print("Animal: Tartaruga")
elif(x==5):
	print("Animal: Garca")
elif(x==10):
	print("Animal: Arara")
elif(x==20):
	print("Animal: Mico-leao-dourado")
elif(x==50):
	print("Animal: Onca-pintada")
elif(x==100):
	print("Animal: Garoupa")
else:
	print("Animal: Invalido")
-- OUTPUT:
entrada: 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-25 18:32:02) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
x=int(input("valor em real: "))
print("entrada:", x)
if(x==2):
	print("Animal: Tartaruga")
elif(x==5):
	print("Animal: Garca")
elif(x==10):
	print("Animal: Arara")
elif(x==20):
	print("Animal: Mico-leao-dourado")
elif(x==50):
	print("Animal: Onca-pintada")
elif(x==100):
	print("Animal: Garoupa")
else:
	print("Animal: Invalido")
-- EXECUTION TIME:
0.190658
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
entrada: 100
Animal: Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
entrada: 7
Animal: Invalido
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
entrada: 50
Animal: Onca-pintada
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 18:33:01) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
x=int(input("valor em real: "))
print("Entrada:", x)
if(x==2):
	print("Animal: Tartaruga")
elif(x==5):
	print("Animal: Garca")
elif(x==10):
	print("Animal: Arara")
elif(x==20):
	print("Animal: Mico-leao-dourado")
elif(x==50):
	print("Animal: Onca-pintada")
elif(x==100):
	print("Animal: Garoupa")
else:
	print("Animal: Invalido")
-- OUTPUT:
Entrada: 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-25 18:33:05) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
x=int(input("valor em real: "))
print("Entrada:", x)
if(x==2):
	print("Animal: Tartaruga")
elif(x==5):
	print("Animal: Garca")
elif(x==10):
	print("Animal: Arara")
elif(x==20):
	print("Animal: Mico-leao-dourado")
elif(x==50):
	print("Animal: Onca-pintada")
elif(x==100):
	print("Animal: Garoupa")
else:
	print("Animal: Invalido")
-- EXECUTION TIME:
0.155957
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Entrada: 100
Animal: Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
Entrada: 7
Animal: Invalido
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
Entrada: 50
Animal: Onca-pintada
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
